tests/ui/g-route-policy-mismatch.stderr
error[E0080]: evaluation panicked: route policy mismatch
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Route<hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<120, (), hibana::integration::cap::control::RouteDecisionKind>>, 9>, hibana::g::Policy<hibana::g::Send<0, 0, hibana::g::Msg<121, (), hibana::integration::cap::control::RouteDecisionKind>>, 10>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<Policy<hibana::g::Send<0, 0, Msg<120, (), RouteDecisionKind>>, 9>, Policy<hibana::g::Send<0, 0, Msg<121, (), RouteDecisionKind>>, 10>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |         12 => panic!("route policy mismatch"),
  |               ------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Route<Policy<hibana::g::Send<0, 0, Msg<120, (), RouteDecisionKind>>, 9>, Policy<hibana::g::Send<0, 0, Msg<121, (), RouteDecisionKind>>, 10>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
